[package]
name = "poem-actual-type-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.37"
poem-openapi = { version = "2.0.7", features = ["rapidoc"] }
tokio = { version = "1.20.1", features = ["full"] }
